Fix phlebotomy schedule docs
